Fixed gap

--- a/styles/grid_styles.scss
+++ b/styles/grid_styles.scss
@@ -71,4 +71,5 @@
   padding: 1em;
   margin-right: 30px;
   margin-top: 20px;
+  gap: 30px;
 }
