--- a/styles/output.css
+++ b/styles/output.css
@@ -131,6 +131,7 @@ svg {
   padding: 1em;
   margin-right: 30px;
   margin-top: 20px;
+  gap: 30px;
 }
 
 /*# sourceMappingURL=output.css.map */
